--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,17 @@
 <resources>
 
     <style name="Theme.DemoComposeApplication" parent="android:Theme.Material.Light.NoActionBar" />
+
+
+    <style name="Base.Theme.DemoXmlApplication" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+
+    <style name="Theme.DemoXmlApplication" parent="Base.Theme.DemoXmlApplication" />
+
+
+
+
+
 </resources>
